Fix #831 - User tour with backdrop alignment off - partial.

--- a/less/essential/navigation.less
+++ b/less/essential/navigation.less
@@ -79,7 +79,6 @@ div.dropdown-menu > ul {
         background-image: none;
         border: none;
         box-shadow: none;
-        line-height: 0;
 
         .btn-navbar {
             margin: 4px 10px 0;
