--- a/style/essential.css
+++ b/style/essential.css
@@ -22951,7 +22951,6 @@ div.dropdown-menu > ul li a {
   background-image: none;
   border: none;
   box-shadow: none;
-  line-height: 0;
 }
 .navbar .navbar-inner .btn-navbar {
   margin: 4px 10px 0;
